--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This my first free websit create using github desktop app</title>   
+    <title>This my first free websit create using github desktop app</title>
+    <link rel="stylesheet" href="assets/css/all.css" type="text/css">   
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css">   
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">   
 
 </head>
 <body>
-    <!-- Header section start-->
-    <header class="section-bg bg-overlay">
+<!-- Header section start-->
+    <header class="section-bg ">
         <div class=" container">
             <div class="header-container">
                 <div class="logo-area">
-                    <h1>Abul <span>Kasem.</span></h1>
+                    <a href="index.html"><img src="assets/img/pmodule.png" alt=""></a>
+                    
                 </div>
                 <div class="menu-area">
                     <ul>
-                        <li><a href="">Last Class</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#class-1"> Class-1</a></li>
                         <li><a href="#class-2">Class-2</a></li>
                         <li><a href="">Class-3</a></li>
@@ -27,31 +30,79 @@
             <div class="pdt-200">
                 <div class="banner-area">
                     <div class="banner-text">
-                        <h3>Welcome</h3>
-                        <h1>I'M A STUDENT OF WEB DEVELOPMENT</h1>
-                        <p> i am a tech lover try to upgrade my skill</p>
-                        <a href="#about" class="boxed-btn">WHO I AM</a>
+                        <h3>Your best Partner</h3>
+                        <h1>Pemodule</h1>
+                        <a href="#about" class="boxed-btn">Get Started <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <!--  Header section end  -->
-    <section class="pdt-80">
+<!--  Header section end  -->
+<!-- why chose us section start -->
+    <section class="pdt-100">
         <div class="container">
-            <div id="about">
-                <div class="about-image"></div>
-                <div class="about-text">
-                    <h1><span>About </span>Me</h1>
-                    <h2>Hello! I'm Abul Kasem</h2>
+            <div class="reason">               
+                <div class="reason-text">
+                    <h1>Resons To<br>
+                    <span>Choose</span> Notebook</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
+                    <a href="" class="boxed-btn">Get Started <i class="fa fa-arrow-right"></i></a>
+                </div>
+                <div class="reason-image"></div>
+            </div>
+        </div>
+    </section>
+<!-- why chose us section end -->
+<!--  sticky-Background-section start  -->
+    <section class="pdt-100">
+        <div class="sticky-bg">
+            <div class="container">
+                <div class="sticky-reason">
+                    <div class="reason-text">
+                        <h1>Resons To<br>
+                        <span>Choose</span> Notebook</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur nobis culpa, dolor modi voluptas tenetur earum laboriosam at rerum nulla perspiciatis quisquam libero. Cum unde rem aliquid nemo tempora dolorem?</p>
+                        <a href="" class="boxed-btn">Get Started <i class="fa fa-arrow-right"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+<!--  sticky-Background-section end  -->
+<!--  gallery-section start  -->
+    <section class="image-gallery">
+        <div class="container">
+            <div class="flex-gallery pdt-120">
+                <div class="gallery-image-col">
+                    <div class="gallery-image-1 gallery-property">
+                        <div class="gallery-content">
+                            <h2>Become a web designer</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                        </div>
+                    </div>
+                    <div class="gallery-image-2 gallery-property">
+                        <h2>Become a web designer</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                    </div>
+                </div>
+                <div class="gallery-image-col">
+                    <div class="gallery-image-3 gallery-property">
+                        <div class="gallery-content">
+                            <h2>Become a web designer</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                        </div>
+                    </div>
+                    <div class="gallery-image-4 gallery-property">
+                        <h2>Become a web designer</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--  gallery-section-end  -->
+
     <div id="class-1">
         <div class="pdt-80 container">
             <h2>Here i am practicing a lot of <span><abbr title="Hyper Text MarkUp language">HTML</abbr></span> tag</h2>
