--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<!-- Header section start-->
+    <!-- Header section start-->
     <header class="section-bg ">
         <div class=" container">
             <div class="header-container">
@@ -21,10 +21,8 @@
                 <div class="menu-area">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#class-1"> Class-1</a></li>
-                        <li><a href="#class-2">Class-2</a></li>
-                        <li><a href="">Class-3</a></li>
-                        <li><a href="">Class-4</a></li>
+                        <li><a href="#class-1"> Generic</a></li>
+                        <li><a href="#class-2">Elements</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,8 +37,8 @@
             </div>
         </div>
     </header>
-<!--  Header section end  -->
-<!-- why chose us section start -->
+    <!--  Header section end  -->
+    <!-- why chose us section start -->
     <section class="pdt-100">
         <div class="container">
             <div class="reason">               
@@ -54,8 +52,8 @@
             </div>
         </div>
     </section>
-<!-- why chose us section end -->
-<!--  sticky-Background-section start  -->
+    <!-- why chose us section end -->
+    <!--  sticky-Background-section start  -->
     <section class="pdt-100">
         <div class="sticky-bg">
             <div class="container">
@@ -70,61 +68,76 @@
             </div>
         </div>
     </section>
-<!--  sticky-Background-section end  -->
-<!--  gallery-section start  -->
-    <section class="image-gallery">
+    <!--  sticky-Background-section end  -->
+    <!--  service-section start  -->
+    <section class="service-area">
         <div class="container">
             <div class="flex-gallery pdt-120">
-                <div class="gallery-image-col">
-                    <div class="gallery-image-1 gallery-property">
-                        <div class="gallery-content">
+                <div class="gallery-image-col">  
+                    <div class="service-bg service-bg-1">
+                        <div class="overlay-content">
                             <h2>Become a web designer</h2>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
                         </div>
-                    </div>
-                    <div class="gallery-image-2 gallery-property">
-                        <h2>Become a web designer</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                    </div>  
+                    <div class="service-bg service-bg-2">
+                        <div class="overlay-content">
+                            <h2>Become a web designer</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="gallery-image-col">
-                    <div class="gallery-image-3 gallery-property">
-                        <div class="gallery-content">
+                <div class="gallery-image-col">  
+                    <div class="service-bg service-bg-3">
+                        <div class="overlay-content">
                             <h2>Become a web designer</h2>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
                         </div>
-                    </div>
-                    <div class="gallery-image-4 gallery-property">
-                        <h2>Become a web designer</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                    </div>  
+                    <div class="service-bg service-bg-4">
+                        <div class="overlay-content">
+                            <h2>Become a web designer</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum cumque sunt, aliquam ea adipisci alias, esse accusantium hic saepe quia illo ut amet illum fugiat voluptatibus perspiciatis commodi quas repellat.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-<!--  gallery-section-end  -->
-    <footer class="main-footer">
+    <!--  service-section-end  -->
+    <section class="newsletter-area pdt-100 pb-100">
+        <div class="newsletter-content d-flex flex-column align-items-center">
+            <h1>Subscribe for our <span>Newsletter</span></h1>
+            <div class="subscribe-form">
+                <form action="">
+                    <input type="mail" placeholder="Your Email address">
+                    <a href="#about" class="boxed-btn">Get Started <i class="fa fa-arrow-right"></i></a>
+                </form>
+            </div>
+
+        </div>
+    </section>
+    <!--  footer-section-start  -->
+    <footer class="footer-area d-flex flex-column align-items-center">
         <div class="footer-menu">
-            <ul>
-                <li><a href=""><i class="fab facebook"></i></a></li>
-                <li><a href="">Generic</a></li>
-                <li><a href="">Elements</a></li>
-            </ul>
+            <a href="">Home</a>
+            <a href="">Generic</a>
+            <a href="">Elements</a>
         </div>
         <div class="footer-social">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Generic</a></li>
-                <li><a href="">Elements</a></li>
-            </ul>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-youtube"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-behance"></i></a>
         </div>
         <div class="copyright-text">
-            Copyright&copy; Allright reserved by Abul kasem
+            Copyright&copy; 
             <script>document.write(new Date().getFullYear());</script>
-            <a href="https://kasem32833.github.io" target="_blank">Tech creator</a>
+            Allright reserved by Abul kasem
+            <a href="https://kasem32833.github.io" target="_blank">Tech lover</a>
         </div>
-        
     </footer>
+    <!--  footer-section-end  -->
 </body>
 
 
